white gap fix attemot no 21 undo

--- a/style.css
+++ b/style.css
@@ -10,19 +10,6 @@ header{
     margin: 0;
     padding: 0;
 }
-.backgroundWrap{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-}
-.backgroundImg{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
 .navBar{
     display: none;
     width: 100%;
@@ -40,6 +27,10 @@ body, html{
     flex-direction: column;
     margin: 0;
     padding: 0;
+    background-image: url(daviddesignsBackground.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     color: #2c2c2c;
     position: relative;
 }
